# Raspberry-Pi-Pico

./: README.md
DAC-R2R/DAC_R2R/: CMakeLists.txt  DAC_R2R.c  SenTable.h  TriTable.h
FreeRTOS-RPI-pico/Control de Motor/: CMakeLists.txt  main.c
FreeRTOS-RPI-pico/Inyectores/: B_Control.c  B_Control.h  B_Nextion.c  B_Nextion.h  CMakeLists.txt  ConfigFreeRtos.c  ConfigFreeRtos.h  Includes.h  Mef.c  Mef.h  RTC_DS3231.h  main.c
FreeRTOS_RPI/Projecto_Inyectores/: Adc.c  Adc.h  B_Control.c  B_Control.h  B_Nextion.c  B_Nextion.h  CMakeLists.txt  ConfigFreeRtos.c  ConfigFreeRtos.h  Defines.h  Includes.h  Mef.c  Mef.h  Projecto_Inyectores.c  RTC_DS3231.c
HMI_Project/: CMakeLists.txt  Control_Lcd.c  Control_Lcd.h  Control_Serial.c  Control_Serial.h  HMI_Project.c  Mef.c  Mef.h
Hola Mundo/Hola_Mundo/: CMakeLists.txt  Hola_Mundo.c
MultiNucleo/: CMakeLists.txt  MultiNucleo.c
RGB/ControlRGB/: CMakeLists.txt  ControlRGB.c
SecuenciaLuces/: CMakeLists.txt  SecuenciaLuces.c
